--- a/README.Rmd
+++ b/README.Rmd
@@ -138,9 +138,9 @@ summary(fit_panel)
 post_plot <- plot(fit_panel)
 
 # plot treatment effects + pre-treatment assessment
-pre_post_plot <- plot(fit_panel, check_panel)
+pre_post_plot <- plot(fit_panel, check_fit = check_panel)
 
-## show the plot side-by-side
+## show the plots side-by-side
 require(patchwork)
 (post_plot +
   ggplot2::theme(aspect.ratio=1) +
@@ -312,6 +312,9 @@ In addition to options described in the previous section, there is one additiona
 head(summary(fit_sa))
 ```
 
+```{r}
+plot(fit_sa, check_sa)
+```
 
 ```{r echo=FALSE, out.width="80%", dpi=250}
 ## plot data   
