Add minor fix on readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ Reference:
 
 ## Table of Contents
 
-1. Basic DID design with Panel Data
+1. [Basic DID design with Panel Data](#The-Basic-Difference-in-Differences-Design-with-Panel-Data)
 2. Basic DID design with Repeated Cross-Section Data
 3. Staggered adoption design
 
@@ -262,7 +262,7 @@ box(lwd = 1.1)
 As we can see in the above plot, states receive the treatment at different years ranging from 1965 at earliest to 1987 at latest (and some of the states never receive the treatment).
 
 
-## Step 1: Assess the pre-treatment parallel trends
+### Step 1: Assess the pre-treatment parallel trends
 
 ```{r sa_check}
 set.seed(1234)
@@ -286,7 +286,7 @@ plot(check_sa)
 ```
 
 
-## Step 2: Estimate staggered-adoption average treatment effect
+### Step 2: Estimate staggered-adoption average treatment effect
 
 `did()` function can handle the staggered adoption design by setting the `design` argument to `design = "sa"`.
 
@@ -314,7 +314,7 @@ head(summary(fit_sa))
 
 ```{r out.width="80%", dpi=250}
 ## plot treatment effects + assessment statistic
-sa_plot <- plot(fit_sa, check_sa)
+sa_plot <- plot(fit_sa, check_sa, band = TRUE)
 
 ## show plot
 sa_plot +
