--- a/README.Rmd
+++ b/README.Rmd
@@ -134,7 +134,7 @@ check_panel <- did_check(
 
 ```{r}
 ## view estimates
-check_panel$estimate
+summary(check_panel)
 ```
 
 ```{r dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
