--- a/README.Rmd
+++ b/README.Rmd
@@ -105,7 +105,7 @@ As the first step of the double DID method, users can check if the parallel tren
 `did_check()` function estimates statistics for testing the parallel trends
 and computes the equivalence confidence intervals.
 
-```{r}
+```{r panel_check}
 ## check parallel trends
 set.seed(1234)
 check_panel <- did_check(
@@ -134,12 +134,12 @@ check_panel <- did_check(
    - `lag`: A vector of non-negative lead parameter. For example, when `lead = c(0, 1)`, treatment effect when the treatment is assigned (`lead = 0`) as well as one-time ahead effect (`lead = 1`) will be estimated. Default is `lead = 0`.
 
 
-```{r}
+```{r panel_check_summary}
 ## view estimates
 summary(check_panel)
 ```
 
-```{r dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
+```{r panel_check_plot, dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
 ## visualize the estimates
 plot(check_panel)
 ```
@@ -165,7 +165,7 @@ plot(check_panel)
 
 ### Step 2: Estimate the treatment effect with the double DID estimator
 
-```{r panel}
+```{r panel_fit}
 ## estimate treatment effect
 set.seed(1234)
 fit_panel <- did(
@@ -188,7 +188,7 @@ fit_panel <- did(
 
 
 
-```{r}
+```{r panel_fit_summary}
 ## view the estimates
 summary(fit_panel)
 ```
@@ -198,7 +198,7 @@ summary(fit_panel)
 
 
 
-```{r dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
+```{r panel_fit_plot, dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
 # plot only treatment effects
 post_plot <- plot(fit_panel)
 
@@ -228,7 +228,7 @@ As an example, we analyze `malesky2014` dataset (see `?malesky2014` for more det
 
 ### Step 1: Assess the pre-treatment parallel trends
 
-```{r, rcs}
+```{r, rcs_check}
 ## load data
 data(malesky2014)
 
@@ -241,12 +241,14 @@ check_rcs <- did_check(
   is_panel= FALSE,
   option  = list(n_boot = 200, parallel = TRUE, id_cluster = "tinh", lag = 1)
 )
+```
 
+```{r rcs_check_summary}
 ## summary
 summary(check_rcs)
 ```
 
-```{r dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
+```{r rcs_check_plot, dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
 plot(check_rcs)
 ```
 
@@ -352,7 +354,7 @@ In addition to options described in the previous section, there is one additiona
 - `thres` parameter in the option control the minimum number of treated units for a particular time to be included in the treatment effect estimation. For example if `thres = 2`, the effect for Tennessee will be removed from the time-average effect because it's the only unit who received the treatment in 1972 (i.e., the number of treated units in 1972 is less than the threshold).
 
 
-```{r dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
+```{r sa_check_plot, dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
 plot(check_sa)
 ```
 
@@ -380,7 +382,7 @@ fit_sa <- did(
 head(summary(fit_sa))
 ```
 
-```{r out.width="80%", dpi=250}
+```{r sa_fit_plot, dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
 ## plot treatment effects + assessment statistic
 sa_plot <- plot(fit_sa, check_sa, band = TRUE)
 
