--- a/README.Rmd
+++ b/README.Rmd
@@ -48,7 +48,7 @@ Reference:
 ## Table of Contents
 
 1. [Basic DID design with panel data](#The-Basic-Difference-in-Differences-Design-with-Panel-Data)
-2. [Basic DID design with repeated cross-section data](#The-Standard-DID-Design-with-Repeated-Cross-sectional-Data)
+2. [Basic DID design with repeated cross-section data](#The-Basic-DID-Design-with-Repeated-Cross-sectional-Data)
 3. [Staggered adoption design](#Staggered-Adoption-Design)
 
 
@@ -119,18 +119,15 @@ check_panel <- did_check(
 
 `did_check()` function takes the following arguments:
 
-- `formula`: A formula specifying variables. It should follow the form of `outcome ~ treatment | covariates`.
-   - `treatment` should be time-varying, that is, `treatment` takes zero for everyone before the treatment assignment, and takes 1 for units who are treated. See the example for how the treatment variable should be coded.
-   - `covariates` can be omitted as `outcome ~ treatment`.
-- `data`: A data frame. This can be either `data.frame` or `tibble`.
-- `id_unit`: A variable name in the data that uniquely identifies units (e.g., individuals or states).
-- `id_time`: A variable name in the data that uniquely identifies time (e.g., year).
-- `design`: Design option. It should be `"did"` when the standard DID design is used.
-- `is_panel`: A boolean argument to indicate the type of the data. When the dataset is panel (i.e., same observations are measured repeately overtime), it should take `TRUE`. See the next section for how to analyze the repeated cross-section data.
-- `option`: A list of options.
-   - `n_boot`: Number of bootstrap iterations to estimate weighting matrix.
-   - `parallel`: A boolean argument. If `TRUE`, bootstrap is conducted in parallel using `future` package.
-   - `lag`: A vector of non-negative lead parameter. For example, when `lead = c(0, 1)`, treatment effect when the treatment is assigned (`lead = 0`) as well as one-time ahead effect (`lead = 1`) will be estimated. Default is `lead = 0`.
+| Argument | Description              |
+|:-------- | :------------------------|
+|`formula` | A formula specifying variables. It should follow the form of `outcome ~ treatment | covariates`. <br /> -`treatment` should be time-varying, that is, `treatment` takes zero for everyone before the treatment assignment, and takes 1 for units who are treated. See the example for how the treatment variable should be coded.<br /> -`covariates` can be omitted as `outcome ~ treatment`.|
+| `data`    | A data frame. This can be either `data.frame` or `tibble`. |
+| `id_unit` | A variable name in the data that uniquely identifies units (e.g., individuals or states) |
+| `id_time` | A variable name in the data that uniquely identifies time (e.g., year). |
+| `design`  | Design option. It should be `"did"` when the basic DID design is used. |
+| `is_panel`| A boolean argument to indicate the type of the data. When the dataset is panel (i.e., same observations are measured repeately overtime), it should take `TRUE`. See the next section for how to analyze the repeated cross-section data. |
+| `option`  | A list of options. <br /> - `n_boot`: Number of bootstrap iterations to estimate weighting matrix. <br /> - `parallel`: A boolean argument. If `TRUE`, bootstrap is conducted in parallel using `future` package.  <br /> - `lag`: A vector of non-negative lead parameter. For example, when `lead = c(0, 1)`, treatment effect when the treatment is assigned (`lead = 0`) as well as one-time ahead effect (`lead = 1`) will be estimated. Default is `lead = 0`. |
 
 
 ```{r panel_check_summary}
@@ -181,9 +178,11 @@ fit_panel <- did(
 
 
 `did()` function inherits most of the arguments in `did_check()`.
+Different from `did_check()`, `did()` takes `lead` parameter in the option argument.
 
-- `option`:
-   - `lead`: A vector of non-negative lead parameter. For example, when `lead = c(0, 1)`, treatment effect when the treatment is assigned (`lead = 0`) as well as one-time ahead effect (`lead = 1`) will be estimated. Default is `lead = 0`.
+| Argument | Description |
+|:-------- | :---------- |
+| `lead`   | A parameter in `option` argument. It should be a vector of non-negative lead values. For example, when `lead = c(0, 1)`, treatment effect when the treatment is assigned (`lead = 0`) as well as one-time ahead effect (`lead = 1`) will be estimated. Default is `lead = 0`. |
 
 
 
@@ -219,7 +218,7 @@ require(patchwork)
 
 
 
-## The Standard DID Design with Repeated Cross-sectional Data
+## The Basic DID Design with Repeated Cross-sectional Data
 
 Sometimes, each period consists of different units, instead of repeated observations of the same units.
 `did()` can handle such "repeated cross-sectional" data by setting `is_panel = FALSE`.
@@ -241,6 +240,17 @@ check_rcs <- did_check(
   option  = list(n_boot = 200, parallel = TRUE, id_cluster = "tinh", lag = 1)
 )
 ```
+
+`did_check()` and `did()` for repeated cross-sectional data accept a slightly different argument
+from the case of panel data.
+
+| Argument | Description |
+|:-------- | :---------- |
+| `formula`| It should include the post-treatment indicator, in addition to the time-invariant `treatment` variable. Covariates are supported as in the panel case.|
+| `is_panel` | It should be `FALSE` to indicate that the data is in the repeated cross-sectional format. |
+| `id_cluster` | A parameter for `option` argument. It should be a variable name used to cluster the standard errors.|
+
+
 
 ```{r rcs_check_summary}
 ## summary
@@ -264,10 +274,6 @@ ff_rcs <- did(
   option  = list(n_boot = 200, parallel = TRUE, id_cluster = "tinh", lead = 0)
 )
 ```
-
-
-- `formula` now includes `treatment` variable as well as the post-treatment time indicator.
-- `id_cluster`: A variable used to cluster the standard errors.
 
 
 ```{r rcs_summary}
@@ -343,7 +349,9 @@ check_sa <- did_check(
   design  = "sa",
   option  = list(n_boot = 200, parallel = TRUE, thres = 1, lag = 1:5)
 )
+```
 
+```{r sa_check_summary}
 ## view estimates
 summary(check_sa)
 ```
@@ -371,13 +379,13 @@ fit_sa <- did(
   id_unit = "id_subject",
   id_time = "id_time",
   design  = "sa",
-  option  = list(n_boot = 200, lead = 0:9, thres = 2, parallel = TRUE)
+  option  = list(n_boot = 200, parallel = TRUE, thres = 1, lead = 0:9)
 )
 ```
 
 
 
-```{r sa_summary}
+```{r sa_est_summary}
 head(summary(fit_sa))
 ```
 
