--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,7 @@ Reference:
 
 ### Workflow
 
-- **Step 1**: Assessing the underlying assumption via `did_check()`
+- **Step 1**: Assessing the parallel trends assumption via `did_check()`
   - View and visualize the output via `plot()` and `summary()`
 - **Step 2**: Estimating the treatment effects via `did()`
   - View and visualize the output via `plot()` and `summary()`
@@ -139,13 +139,24 @@ check_panel <- did_check(
 | `id_time` | A variable name in the data that uniquely identifies time (e.g., year). |
 | `design`  | Design option. It should be `"did"` when the basic DID design is used. |
 | `is_panel`| A boolean argument to indicate the type of the data. When the dataset is panel (i.e., same observations are measured repeately overtime), it should take `TRUE`. See the next section for how to analyze the repeated cross-section data. |
-| `option`  | A list of options. <br /> - `n_boot`: Number of bootstrap iterations to estimate weighting matrix. <br /> - `parallel`: A boolean argument. If `TRUE`, bootstrap is conducted in parallel using `future` package.  <br /> - `lag`: A vector of non-negative lead parameter. For example, when `lead = c(0, 1)`, treatment effect when the treatment is assigned (`lead = 0`) as well as one-time ahead effect (`lead = 1`) will be estimated. Default is `lead = 0`. |
+| `option`  | A list of options. <br /> - `n_boot`: Number of bootstrap iterations to estimate weighting matrix. <br /> - `parallel`: A boolean argument. If `TRUE`, bootstrap is conducted in parallel using `future` package.  <br /> - `lag`: A vector of positive lag values. For example, when `lag = c(1, 2)`, pre-treatment trends are tested on the period between `t-2` to `t-1` (corresponding to `lag = 1`), and between `t-3` and `t-2` where `t` is when the actual treatment is assigned. Default is `lag = 1`. |
 
+
+#### Assessing the output from `did_check()`
+
+The output from `did_check()` function can be accessed by `summary()` function, which reports estimates for the pre-treatment parallel trends as well as the 95% standardized equivalence confidence interval.
 
 ```{r panel_check_summary}
 ## view estimates
 summary(check_panel)
 ```
+
+- `estimate` shows the DID estimates on the pre-treatment periods. Deviation from zero suggests the possible violation of the parallel trends assumption.
+- `lag`
+- `std.error` shows the standard errors for the estimates reported in `estimate` column.
+-
+
+
 
 ```{r panel_check_plot, dpi=250, fig.height = 4, fig.width = 7, out.width="100%", fig.align="center"}
 ## visualize the estimates
