--- a/README.Rmd
+++ b/README.Rmd
@@ -139,7 +139,7 @@ check_panel <- did_check(
 | `id_time` | A variable name in the data that uniquely identifies time (e.g., year). |
 | `design`  | Design option. It should be `"did"` when the basic DID design is used. |
 | `is_panel`| A boolean argument to indicate the type of the data. When the dataset is panel (i.e., same observations are measured repeately overtime), it should take `TRUE`. See the next section for how to analyze the repeated cross-section data. |
-| `option`  | A list of options. <br /> - `n_boot`: Number of bootstrap iterations to estimate weighting matrix. <br /> - `parallel`: A boolean argument. If `TRUE`, bootstrap is conducted in parallel using `future` package.  <br /> - `lag`: A vector of positive lag values. For example, when `lag = c(1, 2)`, pre-treatment trends are tested on the period between `t-2` to `t-1` (corresponding to `lag = 1`), and between `t-3` and `t-2` where `t` is when the actual treatment is assigned. Default is `lag = 1`. |
+| `option`  | A list of option parameters. <br /> - `n_boot`: Number of bootstrap iterations to estimate weighting matrix. <br /> - `parallel`: A boolean argument. If `TRUE`, bootstrap is conducted in parallel using `future` package.  <br /> - `lag`: A vector of positive lag values. For example, when `lag = c(1, 2)`, pre-treatment trends are tested on the period between `t-2` to `t-1` (corresponding to `lag = 1`), and between `t-3` and `t-2` where `t` is when the actual treatment is assigned. Default is `lag = 1`. |
 
 
 #### Assessing the output from `did_check()`
@@ -310,7 +310,7 @@ ff_rcs <- did(
 ```
 
 
-```{r rcs_summary}
+```{r rcs_est_summary}
 summary(ff_rcs)
 ```
 
