Update readme [build_readme]

--- a/README.Rmd
+++ b/README.Rmd
@@ -225,6 +225,11 @@ Users can obtain the estimates via `summary()` function.
 summary(fit_panel)
 ```
 
+- `estimator`
+  - `Double-DID` shows estimates from the double DID estimator that combines the extended parallel trends assumption. This estimate should be used only when the parallel trends assumption is plausible.
+  - `DID` shows estimates from the standard DID estimator.
+  - `sDID` shows estimates from the sequential DID estimator that requires a weaker parallel trends-in-trends assumption. When the parallel trends assumption is not plausible, this estimator should be used. 
+
 `plot()` function for the output from `did()` can be used in two ways.
 First, it generates a treatment effect plot when the function is provided an output from `did()`.
 Second, it generates a plot that adds the pre-treatment trend check in addition to the treatment effect estimates when the function is provided an output from `did()` as well as `did_check()`.
