--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# DIDdesign: Analyzing Difference-in-Differences Design
+# DIDdesign <img src="man/figures/logo.png" align="right" width="72" height="88" />
 
 
 <!-- badges: start -->
