--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-# DIDdesign <img src="man/figures/logo.png" align="right" width="100" height="120" />
+
+
+<p align="center">
+    <img src="man/figures/logo.png" width=200 height=250><br/>
+    DIDdesign:Analyzing Difference-in-Differences Design
+</p>
 
 
 <!-- badges: start -->
