--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,8 @@ knitr::opts_chunk$set(
 
 
 <p align="center">
-    <img src="man/figures/logo.png" width=200 height=250><br/>
-    DIDdesign:Analyzing Difference-in-Differences Design
+<img src="man/figures/logo.png" width=200 height=250 align='center'><br/>
+DIDdesign:Analyzing Difference-in-Differences Design
 </p>
 
 
