--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,10 @@ knitr::opts_chunk$set(
 ```
 
 
-
-<center>
-![DIDdesign:Analyzing Difference-in-Differences Design](man/figures/logo.png =200x250)
-</center>
-
+<p align="center">
+  <img src="man/figures/logo.png" align="center" alt="logo" width="200" height="250"/><br />
+  DIDdesign:Analyzing Difference-in-Differences Design
+</p>
 
 
 <!-- badges: start -->
