Add space after logo

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,10 @@ knitr::opts_chunk$set(
 
 
 <p align="center">
-    <img src="man/figures/logo.png" align="center" alt="logo" width="200" height="250"><br/>
+
+    <img src="man/figures/logo.png" align="center" alt="logo" width="200" height="250"><br/><br/>
     DIDdesign:Analyzing Difference-in-Differences Design
+
 </p>
 
 
