--- a/README.Rmd
+++ b/README.Rmd
@@ -75,8 +75,8 @@ Reference:
 
 ```{r, message=FALSE,warning=FALSE}
 ## load package
-require(DIDdesign)
-require(tidyverse)
+library(DIDdesign)
+library(tidyverse)
 
 
 ## load data
